--- a/style.css
+++ b/style.css
@@ -13,22 +13,35 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
+body{
+  background: #1b1b1b;
+  color: aliceblue;
+  overflow-x: hidden;
+}
 a{
     text-decoration: none;
 }
-body{
-    background: #1b1b1b;
-    color: aliceblue;
-    overflow-x: hidden;
+nav{
+  position: fixed !important;
+  top: 0 !important;
+  right: 0 !important;
+  left: 0 !important;
+  z-index: 999 !important;
 }
 .section{
     /* margin: 1rem; */
     width: 100vw;
     max-width: 100%;
 }
+#sec1{
+  max-height: 100vh;
+}
+.heading{
+  margin-top: 10%;
+}
 .section h1,h3,h4,h5{
         font-family: 'Roboto';
-        text-align: center !important;
+        text-align: center;
     }
     h1{
         font-size: 2.5rem;
