--- a/style.css
+++ b/style.css
@@ -21,24 +21,14 @@ body{
 a{
     text-decoration: none;
 }
-nav{
-  position: fixed !important;
-  top: 0 !important;
-  right: 0 !important;
-  left: 0 !important;
-  z-index: 999 !important;
-}
 .section{
-    /* margin: 1rem; */
     width: 100vw;
     max-width: 100%;
 }
 #sec1{
   max-height: 100vh;
 }
-.heading{
-  margin-top: 10%;
-}
+
 .section h1,h3,h4,h5{
         font-family: 'Roboto';
         text-align: center;
@@ -64,7 +54,7 @@ nav{
     max-width: 35rem;
 } 
 .container-1{
-    margin: 3rem 0;
+    margin: .5rem 0;
     width: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -88,9 +78,11 @@ nav{
 .input-group input::placeholder {
     color: rgb(121, 118, 118);
 }
-
+.sec-frame{
+  height: 70vh;
+}
 .sec-frame iframe{
-    width: 80vw;
+    width: 70vw;
     height: 50vw;
 }
 #msg{
@@ -192,20 +184,16 @@ nav{
       display: none !important;
   }
   .btn-ctner{
-      width: 80vw;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: space-between;
-          -ms-flex-pack: space-between;
-              justify-content: space-between;
-      -webkit-transform: translateY(40px);
-          -ms-transform: translateY(40px);
-              transform: translateY(40px);
+      -webkit-box-pack: right;
+          -ms-flex-pack: right;
+              justify-content: right;
   }
   @media screen and (max-width: 664px) {
     .sec-frame iframe{
-        width: 80vw;
+        width: 70vw;
         height: 80vh;
     }
     }
@@ -220,9 +208,20 @@ nav{
  
 }
 #resultsDiv{
-  padding: 1rem 0;
- 
+  padding: 1rem ;
 }
+ 
 .testScroll{
   color: whitesmoke;
+}
+h5,h3{
+  text-align: left;
+}
+.btn-shr{
+  display: flex;
+  width: 97vw;
+  justify-content: right;
+}
+.container-100{
+  min-height: 100vh;
 }
