left aligned the card headings

--- a/stylsheets/card.css
+++ b/stylsheets/card.css
@@ -64,13 +64,15 @@ body.toggle .grid * {
 }
 .grid {
     width: 100vw;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
     display: flex;
-    gap: 1rem;
+    /* gap: 1rem; */
+    margin-right: 5rem;
 }
 .card {
-    min-width: 15rem;
+    margin: 1rem;
+    /* min-width: 13rem; */
     max-width: 30vw;
     background-color: var(--background-color);
     box-shadow: 0px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
@@ -420,4 +422,7 @@ body:before {
     .card{
         max-width: 90vw;
     }
+}
+.card h4{
+    text-align: left;
 }
