--- a/stylsheets/footer.css
+++ b/stylsheets/footer.css
@@ -1,8 +1,8 @@
-footer {
-  padding: 1rem;
+footer{
+  padding: 2rem 0;
+  width: 100vw;
 }
-
-footer .fHeading {
+.fHeading {
   text-align: center;
   font-weight: bold;
   font-size: large;
@@ -11,31 +11,22 @@ footer .fHeading {
 
 footer .fIcons {
   margin: .5em 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 footer .fLinks {
   margin: .5em 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100vw;
-  -webkit-box-pack: center !important;
-      -ms-flex-pack: center !important;
-          justify-content: center !important;
+  justify-content: center!important;
   gap: 1.5rem;
 }
 
 footer .fLinks a {
   color: whitesmoke;
-  -webkit-text-decoration: underline 2px white;
-          text-decoration: underline 2px white;
+  text-decoration: underline 2px white;
 }
 
 footer .fLinks a:hover {
@@ -44,12 +35,7 @@ footer .fLinks a:hover {
 
 #copyright {
   width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
 }
-/*# sourceMappingURL=footer.css.map */
