--- a/stylsheets/card.css
+++ b/stylsheets/card.css
@@ -74,6 +74,7 @@ body.toggle .grid * {
     margin: 1rem;
     /* min-width: 13rem; */
     max-width: 30vw;
+    width: 18rem;
     background-color: var(--background-color);
     box-shadow: 0px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
     padding: 56px 16px 16px 16px;
@@ -420,6 +421,7 @@ body:before {
         gap: 2rem;
     }
     .card{
+        width: 90vw;
         max-width: 90vw;
     }
 }
