--- a/stylsheets/style.css
+++ b/stylsheets/style.css
@@ -73,7 +73,7 @@ a{
     color: rgb(121, 118, 118);
 }
 .sec-frame{
-  height: 70vh;
+  height: 60vh;
 }
 .sec-frame iframe{
     width: 70vw;
@@ -124,24 +124,7 @@ a{
           -ms-flex-pack: right;
               justify-content: right;
   }
-  @media screen and (max-width: 664px) {
-    .sec-con{
-      width: 100vw !important;
-      display: grid !important;
-      justify-content: center !important;
-    }
-    .sec-frame iframe{
-        width: 90vw;
-        height: 100vh;
-    }
-    .sec-frame{
-      display: flex;
-      justify-content: center;
-    }
-    .btn-shr{
-      margin: 1rem 0;
-    }
-    }
+
 .info{
     padding: 1.3rem;
 }
@@ -155,7 +138,24 @@ a{
 #resultsDiv{
   padding: 1rem ;
 }
- 
+@media screen and (max-width: 664px) {
+  .sec-con{
+    width: 100vw !important;
+    display: grid !important;
+    justify-content: center !important;
+  }
+  .sec-frame iframe{
+      width: 90vw;
+      height: 100vh;
+  }
+  .sec-frame{
+    display: flex;
+    justify-content: center;
+  }
+  .btn-shr{
+    margin: 1rem 0;
+  }
+  }
 .testScroll{
   color: whitesmoke;
 }
@@ -172,4 +172,33 @@ h5,h3{
 }
 .center{
   text-align: center !important;
+}
+.txt, .txt p{
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  line-height: 1.5;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: justify;
+  text-align-last: left;
+}
+.container{
+  max-width: 89vw !important;
+}
+*{
+  max-width: 100vw !important;
+}
+.glink:hover{
+  text-decoration: none;
+  color: #80ed99 !important;
+  -webkit-text-decoration: underline 1.5px #80ed99 !important;
+          text-decoration: underline 1.5px #80ed99 !important;
+          text-underline-offset: 5px !important;
+}
+.glink{
+  transition: all .2s ease-in;
+  text-decoration: none;
+  color: #74c69d !important;
+  -webkit-text-decoration: underline 1.5px #74c69d !important;
+  text-decoration: underline 1.5px #74c69d !important;
+  text-underline-offset: 2px !important;
 }
